--- a/sections/custom-product-recommendation.liquid
+++ b/sections/custom-product-recommendation.liquid
@@ -50,7 +50,7 @@
       content: section.settings.content
     -%}
 
-    <div class="{% if section.settings.show_progress_bar %}scrollable-with-controls{% else %}floating-controls-container{% endif %}">
+    <div class="scrollable-with-controls">
       {%- assign scroll_area_id = 'scroll-area-' | append: section.id -%}
       <scroll-carousel
         selector="product-card"
@@ -63,34 +63,14 @@
         </reveal-items>
       </scroll-carousel>
 
-      {%- if section.settings.stack_products == false -%}
-        {%- if section.settings.show_progress_bar -%}
+
           {%- assign default_progress = section.settings.products_per_row_desktop
             | times: 1.0
             | divided_by: section.settings.products.count
           -%}
           {%- render 'scrollbar', observes: scroll_area_id, default_progress: default_progress, show_buttons: true -%}
-        {%- else -%}
-          <button
-            is="prev-button"
-            class="circle-button circle-button--lg circle-button--fill border group"
-            aria-controls="{{ scroll_area_id }}"
-            disabled
-          >
-            <span class="sr-only">{{ 'general.accessibility.previous' | t }}</span>
-            <span class="animated-arrow animated-arrow--reverse"></span>
-          </button>
 
-          <button
-            is="next-button"
-            class="circle-button circle-button--lg circle-button--fill border group"
-            aria-controls="{{ scroll_area_id }}"
-          >
-            <span class="sr-only">{{ 'general.accessibility.next' | t }}</span>
-            <span class="animated-arrow"></span>
-          </button>
-        {%- endif -%}
-      {%- endif -%}
+
     </div>
   </div>
 </div>
