--- a/assets/product-recommendation.js.liquid
+++ b/assets/product-recommendation.js.liquid
@@ -1,8 +1,10 @@
 
 async function initProductRecommendation(selector) {
-  const productId = selector.dataset.productId;
+  const productId = selector.dataset.productId; 
+  const productLimit = selector.dataset.productRecommendationLimit;
+
   const response = await fetch(
-    `https://rebuyengine.com/api/v1/products/recommended?shopify_product_ids=${productId}&limit=5&key=3c31af894205d709aacd3e8da2ed30b19782df83`,
+    `https://rebuyengine.com/api/v1/products/recommended?shopify_product_ids=${productId}&limit=${productLimit}&key=3c31af894205d709aacd3e8da2ed30b19782df83`,
     {
       method: 'GET',
     }
@@ -10,10 +12,9 @@ async function initProductRecommendation(selector) {
   const data = await response.json();
 
   //get custom recommended products section
-  const recommendedSection = await fetch(window.location.pathname+ '?section_id=custom-product-recommendation').then(res=>res.text())
+  const recommendedSection = selector.innerHTML;
   const recommendationDOM = new DOMParser().parseFromString(recommendedSection, 'text/html');
-  const recomSectionEl = recommendationDOM.querySelector(".section-stack");
-  const productListEl = recomSectionEl.querySelector("product-list");
+  const productListEl = recommendationDOM.querySelector("product-list");
 
   data.data.forEach((product) => {
     var compareAtPrice = product.variants[0].compare_at_price;
@@ -92,7 +93,8 @@ async function initProductRecommendation(selector) {
        </product-card>`;
        productListEl.insertAdjacentHTML("beforeend", productcard);
   });
-  document.querySelectorAll(".shopify-section--product-recommendations .section-stack")[1].innerHTML = recomSectionEl.innerHTML;
+  selector.closest(".section-stack").appendChild(recommendationDOM.body.firstChild)
+  selector.remove();
 }
 
 document.addEventListener('DOMContentLoaded', () => {
