--- a/sections/custom-product-recommendation.liquid
+++ b/sections/custom-product-recommendation.liquid
@@ -49,7 +49,7 @@
       heading_gradient: section.settings.heading_gradient,
       content: section.settings.content
     -%}
-    <script type="text/html" id="custom-product-recommendation-template" data-product-recommendation data-product-id="{{product.id}}" data-product-recommendation-limit="{{ section.settings.recommendations_count }}">
+    <script type="text/html" id="custom-product-recommendation-template" data-product-recommendation data-product-id="{{product.id}}" data-product-recommendation-limit="{{ section.settings.recommendations_count }}" data-card-background="{{ section.settings.product_card_background }}" data-text-color="{{ section.settings.product_card_text_color }}">
       <div class="{% if section.settings.show_progress_bar %}scrollable-with-controls{% else %}floating-controls-container{% endif %}">
         {%- assign scroll_area_id = 'scroll-area-' | append: section.id -%}
         <scroll-carousel
