padding added to product card

--- a/assets/product-recommendation.js.liquid
+++ b/assets/product-recommendation.js.liquid
@@ -80,7 +80,7 @@ async function initProductRecommendation(selector) {
                sizes="(max-width: 699px) 74vw, (max-width: 999px) 38vw, calc(min(100vw - 96px, 1800px) / 4 - (24px / 4 * 3))"
            ></a>
          </div>
-         <div class="product-card__info ">
+         <div class="product-card__info " style="padding: 1rem;">
            <a href="/collections/vendors?q=${product.vendor}" class="text-xs link-faded" style="color:${textColor}">${product.vendor}</a>
            <div class="v-stack gap-0.5 w-full ">
              <span class="product-card__title"><a href='${product.link}' class='bold' style="color:${textColor}">${product.title}</a></span
