--- a/assets/product-recommendation.js.liquid
+++ b/assets/product-recommendation.js.liquid
@@ -1,4 +1,3 @@
-
 async function initProductRecommendation(selector) {
   const productId = selector.dataset.productId; 
   const productLimit = selector.dataset.productRecommendationLimit;
@@ -19,91 +18,21 @@ async function initProductRecommendation(selector) {
   const recommendationDOM = new DOMParser().parseFromString(recommendedSection, 'text/html');
   const productListEl = recommendationDOM.querySelector("product-list");
 
-  data.data.forEach((product) => {
-    var compareAtPrice = product.variants[0].compare_at_price;
-    var price = product.variants[0].price;
-    var discount = "";
-    var customClass = "";
-    var discountCustomClass = "";
-    let secondaryImage;
-    let secondaryImageAlt;
-    let secondaryImageDisplay;
-    let secondaryImageAltDisplay;
+  let fetchProductCards = data.data.map(product=>fetch(`/products/${product.handle}?view=card`).then(res=>res.text()).then(html=>html))
+  let productCards = await Promise.all(fetchProductCards);
+  productCards.forEach(productcard=>productListEl.insertAdjacentHTML("beforeend", productcard));
+  selector.closest(".section-stack").appendChild(recommendationDOM.body.firstChild);
 
-    if(compareAtPrice === null || compareAtPrice === 'null' ){
-      compareAtPrice = '';
-      customClass = 'sale-badge-api';
-    }
-    else{
-      discount = parseFloat(compareAtPrice) - parseFloat(price);
-      compareAtPrice = `$${product.variants[0].compare_at_price} USD`;
-      discount = parseFloat(discount).toFixed(2);
-      discount = `Save $${discount}`;
-      discountCustomClass = 'sale-price-custom';
-    }
-
-    if (product.images[1] !== undefined) {
-      secondaryImage = product.images[1].src;
-      secondaryImageAlt = product.images[1].alt;
-    } else {
-      secondaryImage = product.image.src;
-      secondaryImageAlt = product.image.alt; 
-    }
-
-    secondaryImageDisplay = secondaryImage || '';
-    secondaryImageAltDisplay = secondaryImageAlt || '';
-
-    const productcard = `
-       <product-card
-         handle="${product.handle}"
-         class="product-card product-card--blends product-card--show-secondary-media bg-custom text-custom"
-         style="background:${cardBackground}; --text-color: 26 26 26; opacity: 1; transform: translateY(0px);">
-         <div class="product-card__badge-list"><on-sale-badge discount-mode="saving" class="badge badge--on-sale ${customClass}">${discount}</on-sale-badge></div>
-         <div class="product-card__figure">
-           <a
-             href="${product.link}"
-             data-instant=""> <img
-               src="${product.image.src}"
-               alt="${product.image.alt}"
-               width="1024"
-               height="768"
-               loading="eager"
-               sizes="(max-width: 699px) 74vw, (max-width: 999px) 38vw, calc(min(100vw - 96px, 1800px) / 4 - (24px / 4 * 3))"
-               class="product-card__image product-card__image--primary  aspect-square"
-             ><img
-               src="${secondaryImageDisplay}"
-               alt="${secondaryImageAltDisplay}"
-               width="1024"
-               height="768"
-               loading="eager"
-               class="product-card__image product-card__image--secondary object-fill"
-               fetchpriority="low"
-               sizes="(max-width: 699px) 74vw, (max-width: 999px) 38vw, calc(min(100vw - 96px, 1800px) / 4 - (24px / 4 * 3))"
-           ></a>
-         </div>
-         <div class="product-card__info " style="padding: 1.2rem;">
-           <a href="/collections/vendors?q=${product.vendor}" class="text-xs link-faded" style="color:${textColor}">${product.vendor}</a>
-           <div class="v-stack gap-0.5 w-full ">
-             <span class="product-card__title"><a href='${product.link}' class='bold' style="color:${textColor}">${product.title}</a></span
-             ><price-list class="price-list  "
-               ><sale-price class="text-subdued ${discountCustomClass}" style="color:${textColor}; opacity: 0.75;"> <span class="sr-only">Sale price</span>$${product.variants[0].price} USD</sale-price>
-               <compare-at-price class="text-subdued line-through">
-                   <span class="sr-only">Regular price</span>${compareAtPrice}</compare-at-price>
-               </price-list
-             >
-           </div>
-         </div>
-       </product-card>`;
-       productListEl.insertAdjacentHTML("beforeend", productcard);
-  });
-  selector.closest(".section-stack").appendChild(recommendationDOM.body.firstChild)
+  console.log("recommendationDOM.body.firstChild",recommendationDOM.body.firstChild);
+  
   selector.remove();
 }
 
 document.addEventListener('DOMContentLoaded', () => {
   (async () => {
-    const selector = document.querySelector('[data-product-recommendation]');
-    if (!selector) return;
-    await initProductRecommendation(selector);
+    const selectors = document.querySelectorAll('[data-product-recommendation]');
+    if (selectors.length == 0) return;
+    selectors.forEach(selector=> initProductRecommendation(selector));
   })()
 });
+
