--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -185,5 +185,8 @@ NOTE TO DEVELOPERS: welcome to Impact theme! We hope that you will enjoy editing
       {%- endif -%}
     </main>
   {%- render 'layouthub_footer' -%} 
- {% include 'social-login' %}</body>
+ {% include 'social-login' %}
+<script src="{{'product-recommendation.js' | asset_url }}" defer></script> 
+
+</body>
 </html>
