quick add issue resolved

--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -24,7 +24,8 @@ Supported variables
 
 {{- 'product-card.css' | asset_url | stylesheet_tag: preload: true -}}
 
-
+{% assign randomNumber = "now" | date: "%N" | modulo: 1000000 | plus: 0 %}
+{% assign generated_section_id = section.id | default: randomNumber %}
 {%- assign show_rating = show_rating | default: settings.show_product_rating, allow_false: true -%}
 {%- assign show_vendor = show_vendor | default: settings.show_vendor, allow_false: true -%}
 {%- assign show_quick_buy = show_quick_buy | default: settings.show_quick_buy, allow_false: true -%}
@@ -105,7 +106,7 @@ Supported variables
               </div>
             {%- endform -%}
           {%- else -%}
-            {%- capture quick_buy_id -%}quick-buy-{{ section.id }}-{{ product.id }}{%- endcapture -%}
+            {%- capture quick_buy_id -%}quick-buy-{{ generated_section_id }}-{{ product.id }}{%- endcapture -%}
 
             <div class="pointer-fine:hidden">
               <button type="button" aria-controls="{{ quick_buy_id }}" aria-expanded="false" aria-label="{{ quick_add_label | escape }}" is="custom-button" class="product-card__mobile-quick-buy-button">
@@ -174,7 +175,7 @@ Supported variables
       {%- for color_label in color_label_list -%}
         {%- if product.options_by_name[color_label] != blank -%}
           {%- assign product_option = product.options_by_name[color_label] -%}
-          {%- capture name -%}swatch-{{ section.id }}-{{ product.id }}-{{ product_option.position }}{%- endcapture -%}
+          {%- capture name -%}swatch-{{ generated_section_id }}-{{ product.id }}-{{ product_option.position }}{%- endcapture -%}
 
           <div class="product-card__aside">
             {%- case settings.product_color_display -%}
