rebuy cart custom classes added

--- a/assets/apps.css
+++ b/assets/apps.css
@@ -303,3 +303,14 @@
     font-size: 7.5rem;
   }
 }
+
+
+//rebuy cart
+:root {
+  --rebuy-padding: 4px;
+}
+
+.rebuy-cart__header-custom {
+  padding-top: var(--rebuy-padding);
+  padding-bottom: var(--rebuy-padding);
+}
