--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -187,6 +187,6 @@ NOTE TO DEVELOPERS: welcome to Impact theme! We hope that you will enjoy editing
   {%- render 'layouthub_footer' -%} 
  {% include 'social-login' %}
 <script src="{{'product-recommendation.js' | asset_url }}" defer></script> 
-
+ {%  render  'rebuy-cart-custom-template' %}
 </body>
 </html>
