--- a/assets/theme.css
+++ b/assets/theme.css
@@ -10094,3 +10094,139 @@ line-item .line-item__info .list-disc .text-subdued{
   height: 20px;
 }
 
+
+/* rebuy cart */
+:root {
+  --rebuy-padding: 4px;
+}
+
+.rebuy-cart__header-custom {
+  padding-top: var(--rebuy-padding);
+  padding-bottom: var(--rebuy-padding);
+}
+
+/* Rebuy cart drawer */
+.rebuy-cart__flyout-item.flyout-item{
+  padding: calc(var(--rebuy-padding) * 3) 0;
+}
+.rebuy-cart__progress-bar-container.above.progress-bar-container-bottom-padding{
+  padding: calc(var(--rebuy-padding) * 2) calc(var(--rebuy-padding) * 4);
+}
+.rebuy-cart__flyout-recommendations.flyout-recommendations-sticky{
+  position: sticky;
+  bottom: 0;
+  z-index: 2;
+  padding: 0 calc(var(--rebuy-padding) * 3) calc(var(--rebuy-padding) * 6);
+  -webkit-box-shadow: 0px -4px 3px rgba(50, 50, 50, 0.10);
+  -moz-box-shadow: 0px -4px 3px rgba(50, 50, 50, 0.10);
+  box-shadow: 0px -4px 3px rgba(50, 50, 50, 0.10);
+}
+.flyout-recommendations-sticky .rebuy-widget .rebuy-widget-content .primary-title{
+  margin: 0;
+  line-height: 1;
+  padding: calc(var(--rebuy-padding) * 2) 0;
+  font-weight: bold;
+  border-bottom: 1px solid #e3e3e3;
+}
+.flyout-recommendations-sticky .rebuy-widget .rebuy-widget-content .flickity-viewport{
+  /* max-width: 80%; */
+  margin: 0 auto;
+  /* height: 130px; */
+}
+.flyout-recommendations-sticky .rebuy-widget .rebuy-widget-content .flickity-viewport .flickity-slider .rebuy-product-block{
+  padding: 0 calc(var(--rebuy-padding) * 12);
+  border: 0;
+}
+.flyout-recommendations-sticky .rebuy-widget .rebuy-widget-content .flickity-viewport .flickity-slider .rebuy-product-block .rebuy-product-options{
+  margin: 0;
+}
+.flyout-recommendations-sticky .rebuy-widget .rebuy-widget-content .flickity-viewport .flickity-slider .rebuy-product-block .rebuy-product-options select{
+  padding: var(--rebuy-padding) calc(var(--rebuy-padding) * 10) var(--rebuy-padding) calc(var(--rebuy-padding) * 4);
+}
+.rebuy-cart__flyout-recommendations.flyout-recommendations-sticky .rebuy-widget .rebuy-product-grid.large-style-line .rebuy-product-block .rebuy-product-actions .rebuy-button, 
+.rebuy-cart__flyout-recommendations.flyout-recommendations-sticky .rebuy-widget .rebuy-product-grid.medium-style-line .rebuy-product-block .rebuy-product-actions .rebuy-button, 
+.rebuy-cart__flyout-recommendations.flyout-recommendations-sticky .rebuy-widget .rebuy-product-grid.small-style-line .rebuy-product-block .rebuy-product-actions .rebuy-button{
+  font-size: 11px !important;
+}
+.flyout-recommendations-sticky .rebuy-widget .rebuy-widget-content .flickity-page-dots{
+  bottom: -15px;
+}
+.flyout-recommendations-sticky .rebuy-widget .rebuy-widget-content .flickity-page-dots li{
+  width: 20px;
+}
+.rebuy-cart__flyout-footer-padding{
+  padding: calc(var(--rebuy-padding) * 3) calc(var(--rebuy-padding) * 5);
+}
+.rebuy-cart__flyout-subtotal-smallFont{
+  font-size: 14px;
+}
+.rebuy-cart__flyout-actions-padding .rebuy-button{
+  padding: var(--rebuy-padding);
+}
+.rebuy-cart__flyout-footer.rebuy-cart__flyout-footer-padding{
+  padding: 0;
+}
+.rebuy-cart__flyout-footer.rebuy-cart__flyout-footer-padding .rebuy-cart__checkout_container{
+  padding: calc(var(--rebuy-padding) * 3) calc(var(--rebuy-padding) * 5);
+}
+@media (max-width: 540px){
+  .rebuy-cart__flyout-header.rebuy-cart__header-custom{
+    padding: var(--rebuy-padding) calc(var(--rebuy-padding) * 5);
+  }
+  .rebuy-cart__flyout-actions-padding .rebuy-button{
+    padding: 0;
+  }
+  .flyout-recommendations-sticky .rebuy-widget .rebuy-widget-content .flickity-viewport .flickity-slider .rebuy-product-block{
+    padding: 0 calc(var(--rebuy-padding) * 4);
+  }
+  .rebuy-cart__flyout-recommendations.flyout-recommendations-sticky .rebuy-widget .rebuy-product-grid.large-style-line .rebuy-product-block .rebuy-product-info .rebuy-product-title, 
+  .rebuy-cart__flyout-recommendations.flyout-recommendations-sticky .rebuy-widget .rebuy-product-grid.medium-style-line .rebuy-product-block .rebuy-product-info .rebuy-product-title, 
+  .rebuy-cart__flyout-recommendations.flyout-recommendations-sticky .rebuy-widget .rebuy-product-grid.small-style-line .rebuy-product-block .rebuy-product-info .rebuy-product-title{
+    font-size: 12px;
+  }
+  .rebuy-cart__flyout-recommendations.flyout-recommendations-sticky .rebuy-widget .rebuy-product-grid.large-style-line .rebuy-product-block .rebuy-product-media, 
+  .rebuy-cart__flyout-recommendations.flyout-recommendations-sticky .rebuy-widget .rebuy-product-grid.medium-style-line .rebuy-product-block .rebuy-product-media, 
+  .rebuy-cart__flyout-recommendations.flyout-recommendations-sticky .rebuy-widget .rebuy-product-grid.small-style-line .rebuy-product-block .rebuy-product-media{
+    flex-basis: 38%;
+    width: auto;
+  }  
+  .rebuy-cart__flyout-recommendations.flyout-recommendations-sticky .rebuy-widget .rebuy-product-grid.large-style-line .rebuy-product-block .rebuy-product-actions, 
+  .rebuy-cart__flyout-recommendations.flyout-recommendations-sticky .rebuy-widget .rebuy-product-grid.medium-style-line .rebuy-product-block .rebuy-product-actions, 
+  .rebuy-cart__flyout-recommendations.flyout-recommendations-sticky .rebuy-widget .rebuy-product-grid.small-style-line .rebuy-product-block .rebuy-product-actions{
+    width: 100%;
+    /* margin: 10px 0; */
+  }  
+
+  .flyout-recommendations-sticky .rebuy-widget .rebuy-widget-content .flickity-viewport .flickity-slider .rebuy-product-block .rebuy-product-options{
+    
+    margin-top: 5px;
+  }
+  .flyout-recommendations-sticky .rebuy-widget .rebuy-widget-content .flickity-viewport .flickity-slider .rebuy-product-block .rebuy-product-options select.rebuy-select{
+    font-size: 10px;
+    background-position: calc(100% - 20px) calc(1em + 2px),calc(100% - 15px) calc(1em + 2px),calc(100% - 3em) .5em;
+  }
+  .flyout-recommendations-sticky .rebuy-widget .rebuy-widget-content .flickity-page-dots li{
+    width: 6px;
+  }
+  .flyout-recommendations-sticky .rebuy-widget .rebuy-product-block .rebuy-product-media img, 
+  .flyout-recommendations-sticky .rebuy-recommended-products .rebuy-product-block .rebuy-product-media img{
+    max-height: 6.5rem;
+  }
+  .rebuy-cart__flyout-item-product-title.product-title_small{
+    font-size: 12px;
+  }
+  .rebuy-cart__flyout-item-variant-title.variant-title_small{
+    font-size: 10px;
+  }
+  .rebuy-cart__flyout-item-quantity-widget-button.width-small,
+  .rebuy-cart__flyout-item-quantity-widget-label.width-small{
+    width: 30px;
+  }
+  .rebuy-cart__progress-bar-prompt.message-font-small{
+    font-size: 11px;
+  }
+  .flyout-recommendations-sticky .rebuy-widget .flickity-button{
+    height: 30px;
+    width: 30px;
+  }
+}
