--- a/snippets/rebuy-cart-custom-template.liquid
+++ b/snippets/rebuy-cart-custom-template.liquid
@@ -446,8 +446,8 @@
           </div>
         </div>
 
-        <div class="rebuy-cart__flyout-empty-cart" v-html="emptyCartMessage()" v-if="!hasItems()"></div>
-        <div class="rebuy-cart__flyout-empty-cart-footer" v-if="!hasItems()">
+        <div class="rebuy-cart__flyout-empty-cart emptyCart-center-align" v-html="emptyCartMessage()" v-if="!hasItems()"></div>
+        <div class="rebuy-cart__flyout-empty-cart-footer emptyCart-padding" v-if="!hasItems()">
           <div data-app-target="empty_cart"></div>
         </div>
 
