added files in theme liquid

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -188,5 +188,10 @@ NOTE TO DEVELOPERS: welcome to Impact theme! We hope that you will enjoy editing
  {% include 'social-login' %}
 <script src="{{'product-recommendation.js' | asset_url }}" defer></script> 
  {%  render  'rebuy-cart-custom-template' %}
+
+ <script src="{{'vendors.js' | asset_url }}" defer></script>  
+ <script src="{{'global.js' | asset_url }}" defer></script>  
+ <script src="{{'shared.js' | asset_url }}" defer></script> 
+ <script src="{{'section.js' | asset_url }}" defer></script>  
 </body>
 </html>
